--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,9 @@ rustflags = ["-Zoom=panic"]
 
 [dependencies]
 anyhow = "1"
+clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
+toml = "0.7"
 walrus = "0.20.1"
 wit-component = "0.11.0"
 
@@ -38,7 +40,6 @@ anyhow = "1"
 async-std = { version = "1", features = ["attributes"] }
 cap-std = "1.0.12"
 heck =  { version = "0.4" }
-toml = "0.7"
 wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools", branch = "compose-defs" }
 wasmtime = { version = "10.0.1", features = ["component-model"] }
 wasmtime-wasi =  "10.0.1"
