--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
         submodules: recursive
 
     - name: Install Rust
-      run: rustup update nightly --no-self-update && rustup default nightly
+      run: rustup update nightly --no-self-update && rustup default nightly && rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
 
     - name: Install wasm32-wasi target
       run: rustup target add wasm32-wasi
