--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,30 +29,16 @@ jobs:
         submodules: recursive
 
     - name: Install Rust
-      run: rustup update nightly --no-self-update && rustup default nightly && rustup component add rust-src --toolchain nightly-x86_64-unknown-linux-gnu
+      run: rustup update nightly --no-self-update && rustup default nightly
+
+    - name: Install wasm32-unknown target
+      run: rustup target add wasm32-unknown-unknown
 
     - name: Install wasm32-wasi target
       run: rustup target add wasm32-wasi
 
-    - name: Restore Rust build cache
-      uses: actions/cache/restore@v3
-      id: rust-build-restore
-      with:
-        path: target
-        key: engine-build-${{ hashFiles('Cargo.lock', 'virtual-adapter/**/*.rs', 'src/**/*.rs', 'tests/components/**/*.rs') }}
-
-    - name: Build
-      run: cargo build --target wasm32-wasi
-
     - name: Test
       run: cargo test
-
-    - name: Cache Rust dependencies
-      uses: actions/cache/save@v3
-      with:
-        path: target
-        key: engine-build-${{ hashFiles('Cargo.lock', 'virtual-adapter/**/*.rs', 'src/**/*.rs', 'tests/components/**/*.rs') }}
-      if: steps.rust-build-restore.outputs.cache-hit != 'true'
 
   rustfmt:
     name: Rustfmt
