--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "wasi-virt"
 [workspace]
 members = [
   "virtual-adapter",
+  "tests/components/file-read",
   "tests/components/get-env"
 ]
 
