--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,20 +31,24 @@ clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.7"
 walrus = "0.20.1"
-wit-component = "0.11.0"
+wasm-metadata = { git = "https://github.com/bytecodealliance/wasm-tools" }
+wit-component = { git = "https://github.com/bytecodealliance/wasm-tools" }
+wit-parser = { git = "https://github.com/bytecodealliance/wasm-tools" }
 
 [build-dependencies]
 anyhow = "1"
+wit-component = { git = "https://github.com/bytecodealliance/wasm-tools", features = ["dummy-module"] }
+wit-parser = { git = "https://github.com/bytecodealliance/wasm-tools" }
 
 [dev-dependencies]
 anyhow = "1"
 async-std = { version = "1", features = ["attributes"] }
 cap-std = "1.0.12"
 heck =  { version = "0.4" }
-wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools", branch = "main" }
+wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools" }
 wasmtime = { version = "10.0.1", features = ["component-model"] }
 wasmtime-wasi =  "10.0.1"
 
 [workspace.dependencies]
 anyhow = "1"
-wit-bindgen = "0.8.0"
+wit-bindgen = { git = "https://github.com/bytecodealliance/wit-bindgen" }
