--- a/tests/cases/fs-file-read.toml
+++ b/tests/cases/fs-file-read.toml
@@ -1,9 +1,9 @@
 component = "file-read"
 
-host-fs-path = "file.txt"
+host-fs-path = "/file.txt"
 
 [virt-opts.fs.preopens."/".dir.entries]
 "file.txt" = { file = { source = "contents" } }
 
 [expect]
-file-contents = ["contents"]
+file-read = "contents"
