--- a/tests/cases/fs-inner-read.toml
+++ b/tests/cases/fs-inner-read.toml
@@ -3,7 +3,7 @@ component = "file-read"
 host-fs-path = "/mydir/file.txt"
 
 [virt-opts.fs.preopens."/".dir."mydir".dir]
-"file.txt" = { file = { source = "inner contents" } }
+"file.txt" = { source = "inner contents" }
 
 [expect]
 file-read = "inner contents"
