--- a/tests/cases/fs-file-read.toml
+++ b/tests/cases/fs-file-read.toml
@@ -3,7 +3,7 @@ component = "file-read"
 host-fs-path = "/file.txt"
 
 [virt-opts.fs.preopens."/".dir]
-"file.txt" = { file = { source = "contents" } }
+"file.txt" = { source = "contents" }
 
 [expect]
 file-read = "contents"
