--- a/tests/cases/fs-virt-dir-read.toml
+++ b/tests/cases/fs-virt-dir-read.toml
@@ -3,7 +3,7 @@ component = "file-read"
 host-fs-path = "/env-none.toml"
 
 [virt-opts.fs.preopens."/"]
-host = "./tests/cases"
+virtualize = "./tests/cases"
 
 [expect]
 file-read = '''component = "get-env"
