feat: CLI usage and workflow polishing w/o config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ crate-type = ["lib"]
 name = "wasi-virt"
 
 [workspace]
+exclude = ["testapp"]
 members = [
   "virtual-adapter",
   "tests/components/file-read",
@@ -31,6 +32,7 @@ clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.7"
 walrus = "0.20.1"
+wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools", branch = "main" }
 wasm-metadata = { git = "https://github.com/bytecodealliance/wasm-tools" }
 wasm-opt = "0.113.0"
 wit-component = { git = "https://github.com/bytecodealliance/wasm-tools" }
@@ -43,7 +45,6 @@ anyhow = "1"
 async-std = { version = "1", features = ["attributes"] }
 cap-std = "1.0.12"
 heck =  { version = "0.4" }
-wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools" }
 wasmtime = { version = "10.0.1", features = ["component-model"] }
 wasmtime-wasi =  "10.0.1"
 
