--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,9 @@ jobs:
     - name: Install wasm32-wasi target
       run: rustup target add wasm32-wasi
 
+    - name: Build adapter
+      run: build-adapter.sh
+
     - name: Test
       run: cargo test
 
