--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
       run: rustup target add wasm32-wasi
 
     - name: Build adapter
-      run: build-adapter.sh
+      run: ./build-adapter.sh
 
     - name: Test
       run: cargo test
