--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ name = "wasi-virt"
 exclude = ["testapp"]
 members = [
   "virtual-adapter",
+  "tests/components/do-everything",
   "tests/components/file-read",
   "tests/components/get-env"
 ]
