--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ members = [
   "virtual-adapter",
   "tests/components/do-everything",
   "tests/components/file-read",
-  "tests/components/get-env"
+  "tests/components/get-env",
 ]
 
 [profile.release]
@@ -32,7 +32,8 @@ anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.7"
-walrus = "0.20.1"
+wasmparser = { git = "https://github.com/bytecodealliance/wasm-tools" }
+wasm-encoder = { git = "https://github.com/bytecodealliance/wasm-tools" }
 wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools", branch = "main" }
 wasm-metadata = { git = "https://github.com/bytecodealliance/wasm-tools" }
 wasm-opt = "0.113.0"
@@ -45,9 +46,9 @@ anyhow = "1"
 anyhow = "1"
 async-std = { version = "1", features = ["attributes"] }
 cap-std = "1.0.12"
-heck =  { version = "0.4" }
+heck = { version = "0.4" }
 wasmtime = { version = "10.0.1", features = ["component-model"] }
-wasmtime-wasi =  "10.0.1"
+wasmtime-wasi = "10.0.1"
 
 [workspace.dependencies]
 anyhow = "1"
