--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ rustflags = ["-Zoom=panic"]
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
+tokio = { version = "1.30.0", features = ["macros"] }
 toml = "0.7"
 walrus = "0.20.1"
 wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools" }
