--- a/tests/cases/fs-dir-read.toml
+++ b/tests/cases/fs-dir-read.toml
@@ -2,6 +2,11 @@ component = "file-read"
 
 host-fs-path = "/mydir"
 
+[virt-opts.stdio]
+stdin = true
+stdout = true
+stderr = true
+
 [virt-opts.fs.preopens."/".dir."mydir".dir]
 "file1.txt" = { source = "inner contents1" }
 "file2.txt" = { source = "inner contents2" }
