--- a/tests/cases/fs-file-read.toml
+++ b/tests/cases/fs-file-read.toml
@@ -2,6 +2,11 @@ component = "file-read"
 
 host-fs-path = "/file.txt"
 
+[virt-opts.stdio]
+stdin = true
+stdout = true
+stderr = true
+
 [virt-opts.fs.preopens."/".dir]
 "file.txt" = { source = "contents" }
 
