--- a/tests/cases/fs-inner-read.toml
+++ b/tests/cases/fs-inner-read.toml
@@ -2,6 +2,11 @@ component = "file-read"
 
 host-fs-path = "/mydir/file.txt"
 
+[virt-opts.stdio]
+stdin = true
+stdout = true
+stderr = true
+
 [virt-opts.fs.preopens."/".dir."mydir".dir]
 "file.txt" = { source = "inner contents" }
 
