--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.7"
 walrus = "0.20.1"
-wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools", branch = "main" }
+wasm-compose = { git = "https://github.com/bytecodealliance/wasm-tools" }
 wasm-metadata = { git = "https://github.com/bytecodealliance/wasm-tools" }
 wasm-opt = "0.113.0"
 wit-component = { git = "https://github.com/bytecodealliance/wasm-tools" }
@@ -43,11 +43,11 @@ anyhow = "1"
 
 [dev-dependencies]
 anyhow = "1"
-async-std = { version = "1", features = ["attributes"] }
 cap-std = "1.0.12"
 heck =  { version = "0.4" }
-wasmtime = { version = "10.0.1", features = ["component-model"] }
-wasmtime-wasi =  "10.0.1"
+tokio = { version = "1.30.0", features = ["macros"] }
+wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
+wasmtime-wasi =  { git = "https://github.com/bytecodealliance/wasmtime" }
 
 [workspace.dependencies]
 anyhow = "1"
