--- a/tests/cases/fs-file-read.toml
+++ b/tests/cases/fs-file-read.toml
@@ -3,9 +3,9 @@ component = "file-read"
 host-fs-path = "/file.txt"
 
 [virt-opts.stdio]
-stdin = true
-stdout = true
-stderr = true
+stdin = "allow"
+stdout = "allow"
+stderr = "allow"
 
 [virt-opts.fs.preopens."/".dir]
 "file.txt" = { source = "contents" }
