--- a/tests/cases/fs-inner-read.toml
+++ b/tests/cases/fs-inner-read.toml
@@ -3,9 +3,9 @@ component = "file-read"
 host-fs-path = "/mydir/file.txt"
 
 [virt-opts.stdio]
-stdin = true
-stdout = true
-stderr = true
+stdin = "allow"
+stdout = "allow"
+stderr = "allow"
 
 [virt-opts.fs.preopens."/".dir."mydir".dir]
 "file.txt" = { source = "inner contents" }
