--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ anyhow = "1"
 cap-std = "1.0.12"
 heck =  { version = "0.4" }
 tokio = { version = "1.30.0", features = ["macros"] }
-wasmtime = { version = "12.0.0", features = ["component-model"] }
-wasmtime-wasi =  "12.0.0"
+wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
+wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
 
 [workspace.dependencies]
 anyhow = "1"
