fix: stdio virt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ members = [
   "virtual-adapter",
   "tests/components/do-everything",
   "tests/components/file-read",
-  "tests/components/get-env"
+  "tests/components/get-env",
+  "tests/components/stdio"
 ]
 
 [profile.release]
