--- a/virtual-adapter/Cargo.toml
+++ b/virtual-adapter/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 [lib]
 crate-type = ["cdylib"]
 
+[features]
+debug = []
+
 [dependencies]
 anyhow = { workspace = true }
 wit-bindgen = { workspace = true }
