--- a/tests/cases/fs-nested-dir-read.toml
+++ b/tests/cases/fs-nested-dir-read.toml
@@ -11,7 +11,8 @@ stderr = "allow"
 virtualize = "./wit/deps"
 
 [expect]
-file-read = '''/// WASI Monotonic Clock is a clock API intended to let users measure elapsed
+file-read = '''package wasi:clocks@0.2.0-rc-2023-11-10;
+/// WASI Monotonic Clock is a clock API intended to let users measure elapsed
 /// time.
 ///
 /// It is intended to be portable at least between Unix-family platforms and
@@ -22,10 +23,15 @@ file-read = '''/// WASI Monotonic Clock is a clock API intended to let users mea
 ///
 /// It is intended for measuring elapsed time.
 interface monotonic-clock {
-    use wasi:io/poll@0.2.0-rc-2023-10-18.{pollable};
+    use wasi:io/poll@0.2.0-rc-2023-11-10.{pollable};
 
-    /// A timestamp in nanoseconds.
+    /// An instant in time, in nanoseconds. An instant is relative to an
+    /// unspecified initial value, and can only be compared to instances from
+    /// the same monotonic-clock.
     type instant = u64;
+
+    /// A duration of time, in nanoseconds.
+    type duration = u64;
 
     /// Read the current value of the clock.
     ///
@@ -33,14 +39,21 @@ interface monotonic-clock {
     /// produce a sequence of non-decreasing values.
     now: func() -> instant;
 
-    /// Query the resolution of the clock.
-    resolution: func() -> instant;
+    /// Query the resolution of the clock. Returns the duration of time
+    /// corresponding to a clock tick.
+    resolution: func() -> duration;
 
-    /// Create a `pollable` which will resolve once the specified time has been
-    /// reached.
-    subscribe: func(
+    /// Create a `pollable` which will resolve once the specified instant
+    /// occured.
+    subscribe-instant: func(
         when: instant,
-        absolute: bool
+    ) -> pollable;
+
+    /// Create a `pollable` which will resolve once the given duration has
+    /// elapsed, starting at the time at which this function was called.
+    /// occured.
+    subscribe-duration: func(
+        when: duration,
     ) -> pollable;
 }
 '''
