--- a/tests/cases/encapsulate.toml
+++ b/tests/cases/encapsulate.toml
@@ -6,7 +6,7 @@ host-fs-path = "/LICENSE"
 exit = false
 fs.host-preopens = false
 stdio.stdin = "ignore"
-stdio.stdout = "ignore"
+stdio.stdout = "allow"
 stdio.stderr = "ignore"
 clocks = true
 http = false
