--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,12 @@ rustflags = ["-Zoom=panic"]
 anyhow = "1"
 clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
-toml = "0.7"
+toml = "0.8"
 walrus = "0.20.3"
-wasm-compose = "0.5.0"
-wasm-metadata = "0.10.15"
-wasm-opt = "0.114.1"
-wit-component = "0.19.0"
+wasm-compose = "0.5.5"
+wasm-metadata = "0.10.20"
+wasm-opt = "0.114.2"
+wit-component = "0.21.0"
 
 [build-dependencies]
 anyhow = "1"
@@ -49,8 +49,8 @@ heck = { version = "0.4" }
 tokio = { version = "1.30.0", features = ["macros"] }
 wasmtime = { version = "17.0.1", features = ["component-model"] }
 wasmtime-wasi = "17.0.1"
-wasmparser = "0.119.0"
+wasmparser = "0.121.2"
 
 [workspace.dependencies]
 anyhow = "1"
-wit-bindgen = { git = "https://github.com/guybedford/wit-bindgen", rev = "9d72cad91230c456c12286d0f49476caa1b5659c" }
+wit-bindgen = "0.17.1"
