--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Install wasm32-unknown target
       run: rustup target add wasm32-unknown-unknown
 
-    - name: Install wasm32-wasi target
-      run: rustup target add wasm32-wasi
+    - name: Install wasm32-wasip1 target
+      run: rustup target add wasm32-wasip1
 
     - name: Install wasm-tools
       run: cargo install wasm-tools
