--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,9 @@ anyhow = "1"
 cap-std = "3.1.0"
 heck = { version = "0.5" }
 tokio = { version = "1.39.2", features = ["macros"] }
-wasmtime = { version = "22.0.0", features = ["component-model"] }
-wasmtime-wasi = "22.0.0"
+wasmtime = { version = "24.0.0", features = ["component-model"] }
+wasmtime-wasi = "24.0.0"
+wasmtime-wasi-runtime-config = "24.0.0"
 wasmparser = "0.215.0"
 
 [workspace.dependencies]
