Configure Dependabot to update wasmtime family crates together
See https://docs.github.com/en/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file#groups

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,9 @@ updates:
     directory: /
     schedule:
       interval: monthly
+    groups:
+      # Update wasmtime family crates together
+      wasmtime:
+        applies-to: version-updates
+        patterns:
+          - "^wasmtime(-.+)?$"
