--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ clap = { version = "4", features = ["derive"] }
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
 walrus = "0.22.0"
-wasm-compose = "0.218"
+wasm-compose = "0.219"
 wasm-metadata = "0.217"
 wasm-opt = { version = "0.116.1", optional = true }
 wit-component = "0.217"
@@ -46,10 +46,10 @@ anyhow = "1"
 cap-std = "3.3.0"
 heck = { version = "0.5" }
 tokio = { version = "1.40", features = ["macros"] }
-wasmtime = { version = "25", features = ["component-model"] }
-wasmtime-wasi = "25"
-wasmtime-wasi-runtime-config = "25"
-wasmparser = "0.218"
+wasmtime = { version = "27", features = ["component-model"] }
+wasmtime-wasi = { version = "27" }
+wasmtime-wasi-config = { version = "27" }
+wasmparser = "0.219.1"
 
 [workspace.dependencies]
 anyhow = "1"
