--- a/virtual-adapter/Cargo.toml
+++ b/virtual-adapter/Cargo.toml
@@ -12,4 +12,4 @@ debug = []
 
 [dependencies]
 anyhow = { workspace = true }
-wit-bindgen = { workspace = true }
+wit-bindgen = { workspace = true, features = [ "macros" ] }
