--- a/tests/components/do-everything/Cargo.toml
+++ b/tests/components/do-everything/Cargo.toml
@@ -3,10 +3,12 @@ name = "do-everything"
 version = "0.1.0"
 publish = false
 
+edition.workspace = true
+
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
 anyhow = { workspace = true }
-rand = "0.8.5"
-wit-bindgen = { workspace = true }
+rand = { workspace = true, features = ["thread_rng"] }
+wit-bindgen = { workspace = true, features = ["macros"] }
