--- a/tests/components/get-config/Cargo.toml
+++ b/tests/components/get-config/Cargo.toml
@@ -3,9 +3,11 @@ name = "get-config"
 version = "0.1.0"
 publish = false
 
+edition.workspace = true
+
 [lib]
 crate-type = ["cdylib"]
 
 [dependencies]
 anyhow = { workspace = true }
-wit-bindgen = { workspace = true }
+wit-bindgen = { workspace = true, features = ["macros"] }
