Add clap feature 'wrap_help' as well
Signed-off-by: Ludvig Liljenberg <4257730+ludfjig@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ wasm-opt = ["dep:wasm-opt"]
 
 [dependencies]
 anyhow = { workspace = true }
-clap = { workspace = true, features = ["std", "derive", "color", "error-context", "help", "suggestions", "usage"] }
+clap = { workspace = true, features = ["std", "derive", "color", "error-context", "help", "suggestions", "usage", "wrap_help"] }
 serde = { workspace = true, features = ["derive"] }
 walrus = { workspace = true }
 wasm-compose = { workspace = true }
