--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
 name: CI
 
 on:
+  merge_group:
   push:
     branches: [main]
   pull_request:
     branches: [main]
+
 defaults:
   run:
     shell: bash
