--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ semver = { workspace = true, features = ["serde"] }
 anyhow = { workspace = true }
 cap-std = { workspace = true }
 heck = { workspace = true }
+log = { workspace = true }
 tokio = { workspace = true, features = ["macros"] }
 wasmparser = { workspace = true, features = ["std", "component-model"] }
 wasmtime = { workspace = true, features = [
@@ -62,6 +63,7 @@ anyhow = { version = "1", default-features = false }
 cap-std = { version = "3.4.4", default-features = false }
 clap = { version = "4", default-features = false }
 heck = { version = "0.5", default-features = false }
+log = { version = "0.4.27", default-features = false }
 rand = { version = "0.9.2", default-features = false }
 serde = { version = "1", default-features = false }
 tokio = { version = "1.47", default-features = false }
