--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,16 @@ wasm-opt = ["dep:wasm-opt"]
 
 [dependencies]
 anyhow = { workspace = true }
-clap = { workspace = true, features = ["std", "derive", "color", "error-context", "help", "suggestions", "usage", "wrap_help"] }
+clap = { workspace = true, features = [
+  "std",
+  "derive",
+  "color",
+  "error-context",
+  "help",
+  "suggestions",
+  "usage",
+  "wrap_help",
+] }
 serde = { workspace = true, features = ["derive"] }
 walrus = { workspace = true }
 wasm-compose = { workspace = true }
@@ -48,6 +57,7 @@ anyhow = { workspace = true }
 cap-std = { workspace = true }
 heck = { workspace = true }
 log = { workspace = true }
+env_logger = { workspace = true }
 tokio = { workspace = true, features = ["macros"] }
 wasmparser = { workspace = true, features = ["std", "component-model"] }
 wasmtime = { workspace = true, features = [
@@ -62,9 +72,11 @@ wasmtime-wasi-config = { workspace = true }
 anyhow = { version = "1", default-features = false }
 cap-std = { version = "3.4.4", default-features = false }
 clap = { version = "4", default-features = false }
+env_logger = { version = "0.11.8", default-features = false }
 heck = { version = "0.5", default-features = false }
 log = { version = "0.4.27", default-features = false }
 rand = { version = "0.9.2", default-features = false }
+semver = { version = "1.0.26", default-features = false }
 serde = { version = "1", default-features = false }
 tokio = { version = "1.47", default-features = false }
 toml = { version = "0.8", default-features = false }
@@ -79,7 +91,6 @@ wasmtime-wasi-config = { version = "30.0", default-features = false }
 wit-bindgen = { version = "0.32", default-features = false }
 wit-component = { version = "0.217", default-features = false }
 wit-parser = { version = "0.217", default-features = false }
-semver = { version = "1.0.26", default-features = false }
 
 [profile.release]
 opt-level = "z"
