--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ wasm-metadata = { workspace = true }
 wasm-opt = { workspace = true, optional = true }
 wit-component = { workspace = true }
 wit-parser = { workspace = true }
-toml = { workspace = true, features = ["parse"] }
+toml = { workspace = true, features = ["parse", "serde"] }
 semver = { workspace = true, features = ["serde"] }
 
 [dev-dependencies]
@@ -79,18 +79,18 @@ rand = { version = "0.9.2", default-features = false }
 semver = { version = "1.0.27", default-features = false }
 serde = { version = "1", default-features = false }
 tokio = { version = "1.47", default-features = false }
-toml = { version = "0.8", default-features = false }
-walrus = { version = "0.23.3", default-features = false }
-wasm-compose = { version = "0.219", default-features = false }
-wasm-metadata = { version = "0.217", default-features = false }
+toml = { version = "0.9.8", default-features = false }
+walrus = { version = "0.24.1", default-features = false }
+wasm-compose = { version = "0.240", default-features = false }
+wasm-metadata = { version = "0.240", default-features = false }
 wasm-opt = { version = "0.116.1", default-features = false }
-wasmparser = { version = "0.227.1", default-features = false }
-wasmtime = { version = "30.0", default-features = false }
-wasmtime-wasi = { version = "30.0", default-features = false }
-wasmtime-wasi-config = { version = "30.0", default-features = false }
-wit-bindgen = { version = "0.32", default-features = false }
-wit-component = { version = "0.217", default-features = false }
-wit-parser = { version = "0.217", default-features = false }
+wasmparser = { version = "0.240", default-features = false }
+wasmtime = { version = "38.0", default-features = false }
+wasmtime-wasi = { version = "38.0", default-features = false }
+wasmtime-wasi-config = { version = "38.0", default-features = false }
+wit-bindgen = { version = "0.46", default-features = false }
+wit-component = { version = "0.240", default-features = false }
+wit-parser = { version = "0.240", default-features = false }
 
 [profile.release]
 opt-level = "z"
